docs/dev/k8sv1/service.yaml
# default ClusterIP service type
# targets http port targetPort on any Pod with the label app: wavelen
apiVersion: v1
kind: Service
metadata:
  name: wavelen
spec:
  selector:
    app: wavelen
  ports:
    - name: http
      port: 8080
      targetPort: 8080
