docs/dev/k8sv1/ingress.yaml
# https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wavelen
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#opt-traefik-ingress-kubernetes-iorouter-middlewares
    # Old docs https://doc.traefik.io/traefik/v2.2/middlewares/overview/#provider-namespace describe format explicitly:
    #  <middleware-namespace>-<middleware-name>@kubernetescrd
    # Latest version: https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/crd/http/middleware/
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  # https://kubernetes.io/docs/concepts/services-networking/ingress/#tls
  tls:
    - hosts:
        - wavelen.ink
      secretName: wavelen-tls # created by cert-manager
  rules:
    - host: wavelen.ink # wavelen.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wavelen
                port:
                  number: 8080 # Service port
